// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyAccount: index Form: errorMessageFor with error 1`] = `"error"`;

exports[`VerifyAccount: index Form: errorMessageFor without error 1`] = `null`;

exports[`VerifyAccount: index Form: simulate fields 1`] = `
Object {
  "registeredFields": Object {
    "tempPassword": Object {
      "count": 1,
      "name": "tempPassword",
      "type": "Field",
    },
  },
  "values": Object {
    "tempPassword": "Supplier1",
  },
}
`;

exports[`VerifyAccount: index mapStateToProps 1`] = `
Object {
  "email": true,
  "isOpen": true,
  "serverError": null,
}
`;

exports[`VerifyAccount: index render component with values 1`] = `
"<div className=\\"account-body\\">
  <form>
    <div className=\\"account-content\\">
      <div className=\\"pt-form-group\\">
        <center>
          <h5 className=\\"account-title\\">
             A temporary password has been sent to your email address 
          </h5>
        </center>
        <div className=\\"pt-form-group pt-intent-danger\\">
          <label className=\\"pt-label items-center-75\\" htmlFor=\\"input-a\\">
            Enter temporary password
          </label>
          <div className=\\"pt-form-content items-center-75\\">
            <Field name=\\"tempPassword\\" className=\\"pt-input form-width smd-full-width\\" placeholder=\\"Your temporary password\\" component=\\"input\\" type=\\"password\\" required={true} />
             
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
      </div>
    </div>
    <div className=\\"pt-dialog-footer\\">
      <div className=\\"pt-dialog-footer-actions button-center\\">
        <Blueprint.Button onClick={[undefined]} text=\\"Submit\\" type=\\"submit\\" />
      </div>
    </div>
  </form>
</div>"
`;

exports[`VerifyAccount: index render component without values 1`] = `
"<div className=\\"account-body\\">
  <form>
    <div className=\\"account-content\\">
      <div className=\\"pt-form-group\\">
        <center>
          <h5 className=\\"account-title\\">
             A temporary password has been sent to your email address 
          </h5>
        </center>
        <div className=\\"pt-form-group pt-intent-danger\\">
          <label className=\\"pt-label items-center-75\\" htmlFor=\\"input-a\\">
            Enter temporary password
          </label>
          <div className=\\"pt-form-content items-center-75\\">
            <Field name=\\"tempPassword\\" className=\\"pt-input form-width smd-full-width\\" placeholder=\\"Your temporary password\\" component=\\"input\\" type=\\"password\\" required={true} />
             
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
      </div>
    </div>
    <div className=\\"pt-dialog-footer\\">
      <div className=\\"pt-dialog-footer-actions button-center\\">
        <Blueprint.Button onClick={[Function]} text=\\"Submit\\" type=\\"submit\\" />
      </div>
    </div>
  </form>
</div>"
`;
